fix: add leader and docs
